[package]
name = "motor_toolbox_rs"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Pollen Robotics"]
description = "Motor Toolbox for Rust"
homepage = "https://pollen-robotics.com"
repository = "https://github.com/pollen-robotics/motor-toolbox-rs"
readme = "README.md"
keywords = ["motor", "toolbox", "robotics"]
categories = ["science::robotics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
serde = { version = "1.0.183", features = ["derive"] }
